--- a/index.html
+++ b/index.html
@@ -52,51 +52,59 @@
 
     <h2 class=display-1" style="padding-top: 15px; padding-bottom: 15px;">INDRA Gene Dependency Explainer</h2>
 
-    <div class="card" style="bottom-margin: 100px;">
+    <div class="card" style="padding-bottom: 0px;">
         <h5 class="card-header">Gene Selection</h5>
         <div class="card-body">
         <p>The first dropdown will access a searchable menu of genes involved in CRISPR screens of cancer cell lines found at <a href="https://depmap.org/portal/" title="depmap.org at the Broad Institute">depmap.org</a>. The second dropdown will load once the first gene is selcted and will show the genes correlated with the first that have some explanation found using INDRA.<br><br><i>NOTE: Complexes are treated as undirected connections (i.e. there is no subject and object) and may appear in the output for intermediary connections of the type A-X-B.</i></p>
 
-        <form>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label" style="text-align: right; vertical-align: middle"
-                for="select_first_gene">Gene A</label>
-            <div class="col-sm-4">
-                <div class="dropdown" style="width: 360px; top: 0px; left: 0px; visibility: visible;">
-                    <select id="select_first_gene" class="form-control" placeholder="Select a gene..."></select>
+            <form>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label" style="text-align: right; vertical-align: middle"
+                    for="select_first_gene">Gene A</label>
+                <div class="col-sm-4">
+                    <div class="dropdown" style="width: 360px; top: 0px; left: 0px; visibility: visible;">
+                        <select id="select_first_gene" class="form-control" placeholder="Select a gene..."></select>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label" style="text-align: right; vertical-align: middle"
-                for="select_second_gene">Gene B</label>
-            <div class="col-sm-4">
-                <div class="dropdown" style="width: 360px; top: 0px; left: 0px; visibility: visible;">
-                   <select id="select_second_gene" class="form-control" placeholder="Select a gene..."></select>
+            <div class="form-group row">
+                <label class="col-sm-2 col-form-label" style="text-align: right; vertical-align: middle"
+                    for="select_second_gene">Gene B</label>
+                <div class="col-sm-4">
+                    <div class="dropdown" style="width: 360px; top: 0px; left: 0px; visibility: visible;">
+                       <select id="select_second_gene" class="form-control" placeholder="Select a gene..."></select>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="form-group row">
-        <div class="col-sm-2"></div>
-        <ul class="nav nav-pills col-sm-4">
-            <li class="nav-item"><a class="nav-link" target="_blank"
-                    id="show_correlation">Correlation plot <i class="fas fa-external-link-square-alt"></i></a></li>
-        </ul>
-        </div>
-        </form>
-    </div> <!--  card-body -->
+                <div class="form-group row">
+                <div class="col-sm-2"></div>
+                <ul class="nav nav-pills col-sm-4">
+                    <li class="nav-item"><a class="nav-link" target="_blank"
+                            id="show_correlation">Correlation plot <i class="fas fa-external-link-square-alt"></i></a></li>
+                </ul>
+                </div>
+            </form>
+        </div> <!--  card-body -->
     </div> <!-- card -->
 
-    <div class="card" style="bottom-margin: 10px">
-        <h5 class="card-header" data-toggle="collapse" data-target="#collapseAcB" aria-expanded="false" aria-controls="collapseAcB">Complex <div id="A_complex" style="display:inline-block;">A</div>
-                        <div id="B_complex" style="display:inline-block;">B</div>
-                    <span id="collapseAcB_ev_count" class="badge badge-default float-right"
-                          style="background-color:#6E6E6E;">Statements: 0</span></h5>
+    <!-- COMPLEXES -->
+    <div class="card">
+        <h5 class="card-header"
+            data-toggle="collapse"
+            data-target="#collapseAcB"
+            aria-expanded="false" 
+            aria-controls="collapseAcB">Complex 
+            <div id="A_complex" style="display:inline-block;">A </div>
+            <div id="B_complex" style="display:inline-block;">B</div>
+            <span id="collapseAcB_ev_count" 
+                  class="badge badge-default float-right"
+                  style="background-color:#6E6E6E;">Statements: 0</span>
+        </h5>
         <div id="collapseAcB" class="collapse">
             <div class="card-body">
                 <div id="expl_A_complex_B">&nbsp;</div>
             </div>
-        </div>
+        </div> <!-- card-body -->
     </div> <!-- card -->
 
 <!--
@@ -118,126 +126,165 @@
         </div>
     </div>
     -->
-
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapseAB">
-                            <div id="A_AtoB" style="display:inline-block;">A</div> &rarr; <div id="B_AtoB" style="display:inline-block;">B</div>
-                            <span id="collapseAB_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">Statements: 0</span>
-                            <div id="AB_output_AB"></div>
-                        </a>
-                    </h4>
-
-                    </div>
-
-                    <div id="collapseAB" class="panel-collapse collapse">
-                        <div id="expl_A_to_B">&nbsp;</div>
-                    </div>
-                </div>
-
-
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapseBA">
-                            <div id="B_BtoA" style="display:inline-block;">B</div> &rarr; <div id="A_BtoA" style="display:inline-block;">A</div>
-                            <span id="collapseBA_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">Statements: 0</span>
-                            <div id="BA_output_BA"></div>
-                        </a>
-                    </h4>
-                    </div>
-                    <div id="collapseBA" class="panel-collapse collapse">
-                        <div id="expl_B_to_A">&nbsp;</div>
-                    </div>
-                </div>
-
-
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapseAXB">
-                            <div id="A_AXB" style="display:inline-block;">A</div> &rarr; <div id="X_AXB" style="display:inline-block;">X</div> &rarr; <div id="B_AXB" style="display:inline-block;">B</div>
-                            <span id="collapseAXB_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
-                        </a>
-                    </h4>
-                    </div>
-                    <div id="collapseAXB" class="panel-collapse collapse">
-                        <div id="expl_A_to_X_to_B">&nbsp;
-                            <div id="AXB_dropdown"></div>
-                            <div id="AX_output_AXB"></div>
-                            <div id="XB_output_AXB"></div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapseBXA">
-                            <div id="B_BXA" style="display:inline-block;">B</div> &rarr; <div id="X_BXA" style="display:inline-block;">X</div> &rarr; <div id="A_BXA" style="display:inline-block;">A</div>
-                            <span id="collapseBXA_ev_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
-                        </a>
-                    </h4>
-                    </div>
-                    <div id="collapseBXA" class="panel-collapse collapse">
-                        <div id="expl_B_to_X_to_A">&nbsp;
-                            <div id="BXA_dropdown"></div>
-                            <div id="BX_output_BXA"></div>
-                            <div id="XA_output_BXA"></div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse_st">
-                            Shared target (<div id="A_ABtoX" style="display:inline-block;">A</div> &rarr; <div id="X_ABtoX" style="display:inline-block;">X</div> &larr; <div id="B_ABtoX" style="display:inline-block;">B</div>)
-                            <span id="collapse_st_X_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
-                        </a>
-                    </h4>
-                    </div>
-                    <div id="collapse_st" class="panel-collapse collapse">
-                        <div id="expl_x_is_downstream">&nbsp;
-                            <div id="ABtoX_dropdown"></div>
-                            <div id="AX_output_ABtoX"></div>
-                            <div id="XB_output_ABtoX"></div>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse_sr">
-                            Shared regulator (<div id="A_XtoAB" style="display:inline-block;">A</div> &larr; <div id="X_XtoAB" style="display:inline-block;">X</div> &rarr; <div id="B_XtoAB" style="display:inline-block;">B</div>)
-                            <span id="collapse_sr_X_count" class="badge badge-default float-right" style="background-color:#6E6E6E;">X: 0</span>
-                        </a>
-                    </h4>
-                    </div>
-                    <div id="collapse_sr" class="panel-collapse collapse">
-                        <div id="expl_x_is_upstream">&nbsp;
-                            <div id="XtoAB_dropdown"></div>
-                            <div id="AX_output_XtoAB"></div>
-                            <div id="XB_output_XtoAB"></div>
-                        </div>
-                    </div>
-                </div>
-
+    <!-- A->B -->
+    <div class="card">
+        <h5 class="card-header" 
+            data-toggle="collapse" 
+            data-target="#collapseAB" 
+            aria-expanded="false" 
+            aria-controls="collapseAB">
+            <div id="A_AtoB" style="display:inline-block;">A</div> &rarr; 
+            <div id="B_AtoB" style="display:inline-block;">B</div>
+            <span id="collapseAB_ev_count"
+                  class="badge badge-default float-right" 
+                  style="background-color:#6E6E6E;">Statements: 0</span>
+        </h5>
+        <div id="collapseAB" 
+             class="collapse">
+            <div class="card-body">
+                <div id="expl_A_to_B">&nbsp;</div>
             </div>
+        </div> <!-- card-body -->
+    </div> <!-- card -->
+
+    <!-- B->A -->
+    <div class="card">
+        <h5 class="card-header" 
+            data-toggle="collapse" 
+            data-target="#collapseBA" 
+            aria-expanded="false" 
+            aria-controls="collapseBA">
+            <div id="B_BtoA" style="display:inline-block;">B</div> &rarr; 
+            <div id="A_BtoA" style="display:inline-block;">A</div>
+            <span id="collapseBA_ev_count" 
+                  class="badge badge-default float-right" 
+                  style="background-color:#6E6E6E;">Statements: 0</span>
+        </h5>
+        <div id="collapseBA" 
+             class="collapse">
+            <div class="card-body">
+                <div id="expl_B_to_A">&nbsp;</div>
+            </div>
+        </div> <!-- card-body -->
+    </div> <!-- card -->
+
+    <!-- A->X->B -->
+    <div class="card">
+        <h5 class="card-header"
+            data-toggle="collapse"
+            data-target="#collapseAXB"
+            aria-expanded="false"
+            aria-controls="collapseAXB">
+            <div id="A_AXB" style="display:inline-block;">A</div> &rarr; 
+            <div id="X_AXB" style="display:inline-block;">X</div> &rarr; 
+            <div id="B_AXB" style="display:inline-block;">B</div>
+            <span id="collapseAXB_ev_count" 
+                  class="badge badge-default float-right" 
+                  style="background-color:#6E6E6E;">X: 0</span>
+        </h5>
+        <div id="collapseAXB" 
+             class="collapse">
+            <div class="card-body">
+                <div id="expl_A_to_X_to_B">&nbsp;
+                    <div id="AXB_dropdown"></div>
+                    <div id="AX_output_AXB"></div>
+                    <div id="XB_output_AXB"></div>
+                </div>
+            </div>
+        </div> <!-- card-body -->
+    </div> <!-- card -->
+
+    <!-- B->X->A -->
+    <div class="card">
+        <h5 class="card-header"
+            data-toggle="collapse"
+            data-target="#collapseBXA"
+            aria-expanded="false"
+            aria-controls="collapseBXA">
+            <div id="B_BXA" style="display:inline-block;">B</div> &rarr; 
+            <div id="X_BXA" style="display:inline-block;">X</div> &rarr; 
+            <div id="A_BXA" style="display:inline-block;">A</div>
+            <span id="collapseBXA_ev_count" 
+                  class="badge badge-default float-right" 
+                  style="background-color:#6E6E6E;">X: 0</span>
+        </h5>
+        <div id="collapseBXA" 
+             class="collapse">
+            <div class="card-body">
+                <div id="expl_B_to_X_to_A">&nbsp;
+                    <div id="BXA_dropdown"></div>
+                    <div id="BX_output_BXA"></div>
+                    <div id="XA_output_BXA"></div>
+                </div>
+            </div>
+        </div> <!-- card-body -->
+    </div> <!-- card -->
+
+    <!-- B->X<-A -->
+    <div class="card">
+        <h5 class="card-header"
+            data-toggle="collapse"
+            data-target="#collapse_st"
+            aria-expanded="false"
+            aria-controls="collapse_st">
+                Shared target (<div id="A_ABtoX" style="display:inline-block;">A</div> &rarr; 
+                <div id="X_ABtoX" style="display:inline-block;">X</div> &larr; 
+                <div id="B_ABtoX" style="display:inline-block;">B</div>)
+                <span id="collapse_st_X_count" 
+                      class="badge badge-default float-right" 
+                      style="background-color:#6E6E6E;">X: 0</span>
+        </h5>
+        <div id="collapse_st" 
+             class="collapse">
+            <div class="card-body">
+                <div id="expl_x_is_downstream">&nbsp;
+                    <div id="ABtoX_dropdown"></div>
+                    <div id="AX_output_ABtoX"></div>
+                    <div id="XB_output_ABtoX"></div>
+                </div>
+            </div>
+        </div> <!-- card-body -->
+    </div> <!-- card -->
+
+    <!-- B<-X->A -->
+    <div class="card">
+        <h5 class="card-header"
+            data-toggle="collapse"
+            data-target="#collapse_sr"
+            aria-expanded="false"
+            aria-controls="collapse_sr">
+                Shared regulator (<div id="A_XtoAB" style="display:inline-block;">A</div> &larr; 
+                <div id="X_XtoAB" style="display:inline-block;">X</div> &rarr; 
+                <div id="B_XtoAB" style="display:inline-block;">B</div>)
+                <span id="collapse_sr_X_count" 
+                      class="badge badge-default float-right" 
+                      style="background-color:#6E6E6E;">X: 0</span>
+        </h5>
+        <div id="collapse_sr" 
+             class="collapse">
+            <div class="card-body">
+                <div id="expl_x_is_upstream">&nbsp;
+                    <div id="XtoAB_dropdown"></div>
+                    <div id="AX_output_XtoAB"></div>
+                    <div id="XB_output_XtoAB"></div>
+                </div>
+            </div>
+        </div> <!-- card-body -->
+    </div> <!-- card -->
+
+    </div> <!-- closing div for class="container theme-showcase" role="main" -->
+
+    <div class="container theme-showcase" role="apiKey" style="padding-top: 40px">
+    <div class="card">
+        <div class="card-header"><h4>API key</h4></div>
+        <div class="card-body">
+            <form name="apiKeyForm" action="javascript:keySubmit(api_key_input.value)">
+                If no key is provided, evidence text output might be limited. Links to source material will always be provided.<br>
+                <input type="text" name="api_key" id="api_key_input" placeholder="Enter key here..." style="width: 360px;">
+                <input type="submit" name="store_button" value="submit key">
+                <div id="ensure_user_on_api_key">No key given.</div>
+            </form>
         </div>
-    <div class="panel panel-default">
-        <div class="panel-heading"><h4>API key</h4></div>
-        <form name="apiKeyForm" action="javascript:keySubmit(api_key_input.value)">
-            If no key is provided, evidence text output might be limited. Links to source material will always be provided.<br>
-            <input type="text" name="api_key" id="api_key_input" placeholder="Enter key here..." style="width: 360px;">
-            <input type="submit" name="store_button" value="submit key">
-            <div id="ensure_user_on_api_key">No key given.</div>
-        </form>
     </div>
     </div>
 </body>
