JS: Sourcing curation functions file.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <!-- SCRIPTS -->
     <script type="text/javascript" src="https://selectize.github.io/selectize.js/js/selectize.js"></script>
+    <script type="text/javascript" src="scripts/curationFunctions.js"></script>
     <script type="text/javascript" src="scripts/populate_dropdown_from_remote_json.js"></script>
 
     <script type="text/javascript">
