--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
     <!-- SCRIPTS -->
     <script type="text/javascript" src="https://selectize.github.io/selectize.js/js/selectize.js"></script>
-    <script type="text/javascript" src="scripts/curationFunctions.js"></script>
+    <!-- <script type="text/javascript" src="scripts/curationFunctions.js"></script> -->
+    <script type="text/javascript" src="https://s3.amazonaws.com/depmap-public/curationJS/curationFunctions.js"></script>
     <script type="text/javascript" src="scripts/populate_dropdown_from_remote_json.js"></script>
 
     <script type="text/javascript">
@@ -40,9 +41,24 @@
     </script>
 
     <style>
-    .stmt_toggle {
-        cursor: pointer;
-    }
+        a {
+            color: #256DC5;
+        }
+        .badge-subject {
+          background-color: #4a36aa;
+          color: #FFFFFF;
+        }
+        .badge-object {
+          background-color: #2d8e4c;
+          color: #FFFFFF;
+        }
+        .badge-other {
+          background-color: #606060;
+          color: #FFFFFF;
+        }
+        .curation_toggle {
+          cursor: pointer;
+        }
     </style>
 
     <title>
@@ -133,25 +149,6 @@
         </div> <!-- card-body -->
     </div> <!-- card -->
 
-<!--
-    <div class="card">
-        <h4 class="card-header">Gene Selection</h4>
-        <div class="card-body">
-
-            <a data-toggle="collapse" href="#collapseAcB">
-                Complex <div id="A_complex" style="display:inline-block;">A</div>
-                        <div id="B_complex" style="display:inline-block;">B</div>
-                    <span id="collapseAcB_ev_count" class="badge badge-default float-right"
-                          style="background-color:#BBB; color: #FFFFFF;">Statements: 0</span>
-                    <div id="AB_output_complex"></div>
-            </a>
-        </h4>
-        </div>
-        <div id="collapseAcB" class="panel-collapse collapse">
-            <div id="expl_A_complex_B">&nbsp;</div>
-        </div>
-    </div>
-    -->
     <!-- A->B -->
     <div class="card">
         <h5 class="card-header stmt_toggle" 
